# mechatronics-embedded

./: CMakeLists.txt  ReadMe.md
block_design/: CMakeLists.txt  ReadMe.md  exported-block-v30.tcl  exported-block-v31.tcl
cmake/: CreateVersions.cmake  FindPetalinux.cmake  FindVitis.cmake  FindVivado.cmake  UsePetalinux.cmake  UseVitis.cmake  UseVivado.cmake  toolchain_clang_fpgav3.cmake.in
cross_compile/: CMakeLists.txt  ReadMe.md
espm_firmware/: ReadMe.md  espm-firmware-config.cmake  espm.xsvf
petalinux/: CMakeLists.txt  ReadMe.md
petalinux/configs/: bsp.cfg  config  rootfs_config
petalinux/configs/2022.2/: config  rootfs_config
petalinux/configs/2023.1/: config  rootfs_config
petalinux/configs/2023.2/: config  rootfs_config
petalinux/device-tree/: system-user.dtsi
petalinux/fpgav3block/: fpgav3block.bbappend
petalinux/fpgav3block/files/: fpgav3block.c  fpgav3block.cpp
petalinux/fpgav3init/: fpgav3init.bbappend  fpgav3init.c
petalinux/fpgav3init/files/: fpgav3init.c  fpgav3init.cpp  fpgav3init.service
petalinux/fpgav3sn/: fpgav3sn.bbappend
petalinux/fpgav3sn/files/: fpgav3sn.c  fpgav3sn.cpp
petalinux/libfpgav3/: libfpgav3.bb
petalinux/libfpgav3/files/: Makefile  fpgav3_emio.c  fpgav3_emio.cpp  fpgav3_emio.h  fpgav3_emio_gpiod.cpp  fpgav3_emio_gpiod.h  fpgav3_emio_mmap.cpp  fpgav3_emio_mmap.h  fpgav3_lib.cpp  fpgav3_lib.h  fpgav3_qspi.c  fpgav3_qspi.cpp  fpgav3_qspi.h  fpgav3_version.h.in
petalinux/recipes-core/base-files/: base-files_%.bbappend
petalinux/recipes-core/init-ifupdown/: init-ifupdown_%.bbappend
petalinux/recipes-core/init-ifupdown/files/: myinterfaces
platform_linux/: CMakeLists.txt  ReadMe.md
platform_standalone/: CMakeLists.txt  ReadMe.md
platform_standalone/bsp_lib_src/lwip211/: xemacpsif_physpeed.c
platform_standalone/bsp_lib_src/lwip213/: xemacpsif_physpeed.c
platform_standalone/demo_app_src/: main.c
platform_standalone/echo_test_src/: main.c
platform_standalone/fpgav3_lib_src/: fpgav3_emio.c  fpgav3_emio.h
platform_standalone/fsbl_src/: fsbl_hooks.c
platform_standalone/mfg_test_src/: fsbl_hooks.c  memtest.c  menu.c  xqspips_selftest_example.c
